--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,6 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="B액티비티로 이동하기"
+        android:text="B액티비티로 이동하기" />
 
 </LinearLayout>
