--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,13 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/goToFirstBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="A액티비티로 이동하기" />
 
     <Button
+        android:id="@+id/goToSecondBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="B액티비티로 이동하기" />
